remove buy-button margin to fix alignment on home page slides

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -748,6 +748,12 @@ hr {
     }
 }
 
+.fullpage-wrapper {
+    .buy-button {
+        margin: 0
+    }
+}
+
 .product-main {
     h2 {
         color: $white;
